# multi-agent-multi-modal-kg

./: .gitignore  LICENSE  PENDING.md  README.md  SETUP.md  main.py  main_pipeline.py  pymu_output.md  pymu_output_annotated.md  pyproject.toml  questions.csv
.deepeval/: .deepeval_telemetry.txt
agents/: 1-pdf_processor_agent.md  1-pdf_processor_agent.py  2-chunker_agent.md  2-chunker_agent.py  3-graph_data_extractor_agent.md  3-graph_data_extractor_agent.py  4-graph_construction_agent.py  4-vector_store_creation_agent.md  4-vector_store_creation_agent.py  5-jsonl_graph_ingestion_agent.md  5-jsonl_graph_ingestion_agent.py  6-graph_query_agent.py  6-query_agent.md  6-query_agent.py  7-validator_agent.md  7-validator_agent.py  7-validator_agent_llm_analysis.md  7-validator_agent_optimizations_summary.md  QUERY_AGENT_BEHAVIOR.md  chunker_agent.py  pdf_processor_agent.py
chunking_outputs/: attention_functional_roles_annotated_chunks.jsonl  attention_functional_roles_raw_chunks_2k.jsonl  attention_functional_roles_raw_chunks_5k.jsonl  attention_functional_roles_raw_with_image_ids_with_captions_chunks_5k.jsonl  attention_is_all_you_need_annotated_chunks.jsonl  attention_is_all_you_need_raw_chunks_2k.jsonl  attention_is_all_you_need_raw_chunks_5k.jsonl  attention_is_all_you_need_raw_with_image_ids_with_captions_chunks_5k.jsonl  bidirectional_transformer_raw_chunks_2k.jsonl  bidirectional_transformer_raw_chunks_5k.jsonl  book_cleaned_chunks_222_20251101T060852Z.jsonl  neuronal_attention_circuits_raw_chunks_2k.jsonl  neuronal_attention_circuits_raw_chunks_5k.jsonl  (+6 more)
(+96 files in other folders)
