[project]
name = "mas-for-multimodal-knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.1",
    "google-genai>=1.47.0",
    "langchain>=1.0.8",
    "langchain-community",
    "langchain-google-genai>=3.1.0",
    "langchain-huggingface>=1.0.0",
    "langchain-neo4j>=0.6.0",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.7",
    "neo4j>=5.28.2",
    "neo4j-graphrag>=1.10.1",
    "ollama>=0.6.1",
    "pymupdf4llm>=0.2.2",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
]
